--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,14 @@ a {
 
 .name-portrait .portrait-caption{
   font-style: italic;
+  margin-bottom: 1.5rem;
+}
+
+.name-portrait .nickname{
+  margin-bottom: 0;
+  margin-top: 1rem;
+  font-style: italic;
+  font-size: 1rem;
 }
 
 .name-portrait a {
@@ -107,7 +115,7 @@ footer p a {
       background-size: 100%;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background-position: top; 
+      background-position: top;
   }
 
   .name-portrait {
